# lp-rust-wasm-4-stateful-service

./: README.md  docker-compose.yml  order.json
.github/workflows/: ci.yml
client/: index.html
client/js/: app.js
order_management/: Cargo.toml  Containerfile  Dockerfile
order_management/src/: main.rs
sales_tax_rate/: Containerfile  Dockerfile
