[package]
name = "order_management"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
hyper_wasi = { version = "0.15", features = ["full"]}
reqwest_wasi = { version = "0.11", features = ["json"] }
mysql_async_wasi = "0.31"
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3"
